Bugfix T41240: Home key doesn't show everything on F-Curves

Own copy and paste typo in 73d157e meant that this was not in some cases,
the bounds calculated may be incorrect.